Oefening 4 klaar en getest en voltooid.

--- a/robotarm-js-2018-master/oefeningen/oefening4.html
+++ b/robotarm-js-2018-master/oefeningen/oefening4.html
@@ -22,6 +22,20 @@
                 }
             }
 
+            robotArm.moveRight();
+
+            for(a=0; a<3; a++){
+                for(i=0; i<1; i++){
+                    robotArm.moveRight();
+                }
+                robotArm.grab();
+                for(b=0; b<1; b++){
+                    robotArm.moveLeft();
+                }
+                robotArm.drop();
+            }
+               
+
 
             
             // De door jou opgegeven instructies uitvoeren
